# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-11-08 Michael Truog   <mjtruog at protonmail dot com>

    * Add CloudI Service API nodes_status function to provide
      uptime and availability information that is similar to services_status

2018-11-07 Michael Truog   <mjtruog at protonmail dot com>

    * Add limit (STATUS_DURATIONS_YEAR_MAX) to the number of durations
      that may be stored during a year when tracking restart/update delays
      for the CloudI Service API services_status function

2018-10-28 Michael Truog   <mjtruog at protonmail dot com>

    * Add Erlang/OTP 21 compatibility to the cloudi_service_quorum CT test

2018-10-27 Michael Truog   <mjtruog at protonmail dot com>

    * Add autoconf check for C++ exceptions
    * Update external autoconf macros

2018-10-20 Michael Truog   <mjtruog at protonmail dot com>

    * Update proper
    * Update erlang_php tests to require PHP7

2018-10-13 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cloudi_service_router ssh server throughput

2018-10-04 Natanael Copa   <ncopa at alpinelinux dot org>

    * Fix autoconf Erlang version check for aarch64

2018-09-22 Michael Truog   <mjtruog at protonmail dot com>

    * Update backward-cpp
    * Update travis build to use GCC 7 and clang 5

2018-09-16 Michael Truog   <mjtruog at protonmail dot com>

    * CloudI version 1.7.4 released

2018-09-15 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_core Erlang application compiler dependency
    * Add CloudI Service API code_status output in cloudi_core CT tests

2018-09-14 Michael Truog   <mjtruog at protonmail dot com>

    * Add support for Haskell >= 8.4.1
    * Update all Haskell CloudI API dependencies

2018-09-08 Michael Truog   <mjtruog at protonmail dot com>

    * Simplify the CloudI Service API dashboard view_log.html page
    * Add fields to the CloudI Service API code_status function