@@ -5,7 +5,7 @@
 %%%
 %%% MIT License
 %%%
-%%% Copyright (c) 2009-2017 Michael Truog <mjtruog at protonmail dot com>
+%%% Copyright (c) 2009-2018 Michael Truog <mjtruog at protonmail dot com>
 %%%
 %%% Permission is hereby granted, free of charge, to any person obtaining a
 %%% copy of this software and associated documentation files (the "Software"),
@@ -674,7 +674,13 @@
         %    {tags, []}]}]
         %
         discovery = undefined
-            :: #config_nodes_discovery{} | undefined
+            :: #config_nodes_discovery{} | undefined,
+        % cost as currency per kilowatt-hours (kWh)
+        cost = []
+            :: list({node() | default, float()}),
+        % cost currency decimal places
+        cost_precision = 2
+            :: 0..253
     }).
 
 -record(config,
