@@ -133,6 +133,8 @@
 -define(HOURS_IN_DAY, 24).
 -define(SECONDS_IN_HOUR, (60 * 60)).
 -define(NANOSECONDS_IN_SECOND, 1000000000).
+-define(NANOSECONDS_IN_HOUR,
+        (?NANOSECONDS_IN_SECOND * ?SECONDS_IN_HOUR)).
 -define(NANOSECONDS_IN_DAY,
         (?NANOSECONDS_IN_SECOND * ?SECONDS_IN_HOUR *
          ?HOURS_IN_DAY)).
