@@ -108,17 +108,17 @@
 
 -record(state,
     {
-        services = cloudi_x_key2value:new(maps) ::
-            cloudi_x_key2value:
-            cloudi_x_key2value(cloudi_service_api:service_id(),
-                               pid(), #service{}),
-        durations_update = cloudi_core_i_status:durations_new() ::
-            cloudi_core_i_status:durations(cloudi_service_api:service_id()),
-        durations_restart = cloudi_core_i_status:durations_new() ::
-            cloudi_core_i_status:durations(cloudi_service_api:service_id()),
-        changes = #{} ::
-            #{cloudi_service_api:service_id() :=
-              list({increase | decrease, number(), number(), number()})}
+        services = cloudi_x_key2value:new(maps)
+            :: cloudi_x_key2value:
+               cloudi_x_key2value(cloudi_service_api:service_id(),
+                                  pid(), #service{}),
+        durations_update = cloudi_core_i_status:durations_new()
+            :: cloudi_core_i_status:durations(cloudi_service_api:service_id()),
+        durations_restart = cloudi_core_i_status:durations_new()
+            :: cloudi_core_i_status:durations(cloudi_service_api:service_id()),
+        changes = #{}
+            :: #{cloudi_service_api:service_id() :=
+                 list({increase | decrease, number(), number(), number()})}
     }).
 
 -record(cloudi_service_init_end,
